--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
 
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+
     implementation 'androidx.room:room-ktx:2.4.0-rc01'
     kapt 'androidx.room:room-compiler:2.4.0-rc01'
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
