--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,10 @@ plugins {
 android {
     compileSdk 32
 
+    testOptions {
+        animationsDisabled = true
+    }
+
     defaultConfig {
         applicationId "com.tezaalfian.storyapp"
         minSdk 21
@@ -46,6 +50,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
     def camerax_version = "1.1.0-beta03"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
@@ -65,8 +70,19 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.4.0-rc01'
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation 'androidx.room:room-paging:2.4.0-rc01'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
 
     testImplementation 'junit:junit:4.13.2'
+    //mockito
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-inline:3.12.4'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+    androidTestImplementation "com.squareup.okhttp3:okhttp-tls:4.9.3"
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 }
